fix: options for SecurityConfig